# VTK-examples

./: .gitignore  CMakeLists.txt  README.md
AngleWidget/: CLAUDE.md  CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
BetterRendering/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
BrainRigidRegistration/: CMakeLists.txt  ImageRegistration8.cxx
ContouringImageData/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h  Widget.cpp  Widget.h  main.cpp
DisplayOrthogonalSlice/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
DisplaySlice/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
DisplaySlice3/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
GenericQtApplication/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h  main.cpp
Gesture/: CLAUDE.md  CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
ImageImportClass/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
ImageOverlap/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
ImageRegistration/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
ImageRegistration2/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h  main.cpp
ImageSliceOutline/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
ImageThreshold/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
IsotropicExplicitRemeshing/: CMakeLists.txt  IsotropicRemeshingFilter.h  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
LesionSegmentation/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h  main.cpp
Marker/: CMakeLists.txt  MarkerActor.cpp  MarkerActor.h  MarkerAssembly.cpp  MarkerAssembly.h  MarkerPointActor.cpp  MarkerPointActor.h  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h  Widget.cpp  Widget.h  main.cpp
Matrix/: CMakeLists.txt  VTKOpenGLWidget.cpp
MousePoint/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
MoveActorByKeyboard/: CMakeLists.txt  main.cxx
OrientationMarker/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
PickWorldPoint/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
PolyDataContourToImageData/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h  Widget.cpp  Widget.h  main.cpp
ReadContouringFile/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
ReadDICOMSeries/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h  main.cpp
ReadNiiFile/: CMakeLists.txt  VTKOpenGLWidget.cpp
ReadSTL/: CMakeLists.txt  VTKOpenGLWidget.cpp
ReadWriteNiiFile/: CMakeLists.txt  VTKOpenGLWidget.cpp
RemeshingAndSmooth/: CMakeLists.txt  IsotropicRemeshingFilter.cpp  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
ResetCamera/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
ResetCamera2/: CMakeLists.txt  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h
ResliceCursor/: CMakeLists.txt  ResliceCursor.cxx
RigidRegistration/: CMakeLists.txt  ImageRegistration8.cxx
(+10 files in other folders)
